* adding UI using SurfaceView. * implemeting menu button functionality.

--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
     <string name="app_name">Scalandris</string>
     <string name="start_button">スタート</string>
     <string name="start_button2">スタート2</string>
+    <string name="start_button3">スタート3</string>
     <string name="back_button">戻る</string>
 <string name="go_button">GO!</string>
 
@@ -11,5 +12,6 @@
   <string name="mode_lose_prefix">Game Over\nScore: </string>
   <string name="mode_lose_suffix">\nPress Up To Play</string>
   <string name="tetris2_layout_text_text"></string>
+  <string name="tetris3_layout_text_text"></string>
 
 </resources>
